Fix Navbar Links

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#work">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#aboutme">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
 <!--============================ Hero ===================================== -->
 <!-- Start Hero Section -->
 
-<section id="Hero">
+<section id="hero">
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
@@ -82,7 +82,7 @@
 <!--============================ Work ===================================== -->
 <!-- Start Work Section -->
 
-<section id="Work">
+<section id="work">
   <h1 class="text-center margin-bottom: 10px">Projects</h1>
   <div class="container_work margin-top: 10px w-75">         
     <div class="row  justify-content-center ">
