logo added to navbar

--- a/index.html
+++ b/index.html
@@ -28,12 +28,42 @@
 <!--============================ Nav&Navbar  ===================================== -->
 <!-- Start Nav&Navbar Section -->
 
+<!-- <section id="Navbar">
+  <div class="containerNavbar ">
+    <nav class="navbar bg-body-tertiary ">
+      <div class="container-lg">
+        <a class="navbar-brand mb-0 ml-1 h1 href=">Husniye Erparun</a>
+        <ul class="nav justify-content-end nav-underline   mb-3 mb-md-0 ">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#aboutme">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+</section> -->
+
 <section id="Navbar">
   <div class="containerNavbar ">
     <nav class="navbar bg-body-tertiary ">
       <div class="container-lg">
-        <a class="navbar-brand mb-0 ml-1 h1">Husniye Erparun</a>
-        <ul class="nav justify-content-end nav-underline   mb-3 mb-md-0 ">
+        <a class="navbar-brand" href="#">
+          <img src="./Images/logo1-bg.jpg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+          Husniye Erparun
+        </a>
+        <ul class="nav justify-content-end nav-underline   mb-3 mb-md-0">
           <li class="nav-item">
             <a class="nav-link" href="#">Home</a>
           </li>
