project section updated

--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
         <div class="card">
           <img src="../Images/Work_Section_Cards/W3.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
-            <h3 class="card-title">Module 3: UX and Advanced CSS: Bootstrap Portfolio</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
-              <br>loremque sit inventore eligendi delectus neque!Error cum delectus harum fugiat Lorem, ipsum dolor.</excepturi></p>
+            <h4 class="card-title">Module 3: UX and Advanced CSS: Bootstrap Portfolio</h4>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditfa-inverse
+              <br>loremque sit inventore eligendi delectus neque!Error cum delectus harum fugiat Lorem, ipsum dolor.ectus em, ipsum dolor</excepturi></excepturi></p>
               <a href="#" class="btn btn-primary text-capitalize">See Project</a>
             </div>
         </div>
@@ -159,7 +159,7 @@
         <div class="card">
           <img src="../Images/Work_Section_Cards/W4.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
-            <h3 class="card-title">Module 4: JS Fundamentals: Console Finances</h3>
+            <h4 class="card-title">Module 4: JS Fundamentals: Console Finances</h4>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
               <br>loremque sit inventore eligendi delectus neque!Error cum delectus harum fugiat Lorem, ipsum dolor.</excepturi></p>
               <a href="#" class="btn btn-primary text-capitalize justify-content-md-end">See Project</a>
@@ -255,7 +255,7 @@
           <div class="card">
             <img src="../Images/Work_Section_Cards/W14.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
-              <h3 class="card-title">Module 14: Advanced React, Testing, and Deployment</h3>
+              <h4 class="card-title">Module 14: Advanced React, Testing, and Deployment</h4>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
                 <br>loremque sit inventore eligendi delectus neque!Error cum delectus harum fugiat Lorem, ipsum dolor.</excepturi></p>
                 <a href="#" class="btn btn-primary text-capitalize">See Project</a>
