project images updated

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
         </div>
         <div class="col-lg-6">
-            <img src="/Images/hero1-bg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+            <img src="./Images/hero1-bg.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
         </div>
     </div>
   </div>
@@ -121,7 +121,7 @@
       <div class="col-md-3 mb-3 ">
         <!-- <div class="col-md-3 mb-3"> -->
         <div class="card">
-          <img src="../Images/Work_Section_Cards/W1.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+          <img src="./Images/Work_Section_Cards/W1.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
             <h3 class="card-title">Module 1: HTML CSS Git Challenge: Code Refactor</h3>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -133,7 +133,7 @@
 
       <div class="col-md-3 mb-3">
         <div class="card">
-          <img src="../Images/Work_Section_Cards/W2.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+          <img src="./Images/Work_Section_Cards/W2.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
             <h3 class="card-title">Module 2: Working With CSS Challenge: Portfolio</h3>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditfa-inverse
@@ -145,7 +145,7 @@
 
       <div class="col-md-3 mb-3">
         <div class="card">
-          <img src="../Images/Work_Section_Cards/W3.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+          <img src="./Images/Work_Section_Cards/W3.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">Module 3: UX and Advanced CSS: Bootstrap Portfolio</h4>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditfa-inverse
@@ -157,7 +157,7 @@
 
       <div class="col-md-3 mb-3">
         <div class="card">
-          <img src="../Images/Work_Section_Cards/W4.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+          <img src="./Images/Work_Section_Cards/W4.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
             <h4 class="card-title">Module 4: JS Fundamentals: Console Finances</h4>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -169,7 +169,7 @@
 
       <div class="col-md-3 mb-3">
         <div class="card">
-          <img src="../Images/Work_Section_Cards/W5.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+          <img src="./Images/Work_Section_Cards/W5.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
           <div class="card-body">
             <h3 class="card-title">Module 5: <br> Intermediate JavaScript </h3>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -181,7 +181,7 @@
 
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W6.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W6.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">Module 6:<br> Working with Web APIs </h3>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -193,7 +193,7 @@
 
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W7.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W7.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">Module 7: <br>Third-Party APIs</h3>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -204,7 +204,7 @@
         </div>
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W8.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W8.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">Module 8:<br> Server APIs</h3>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -216,7 +216,7 @@
 
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W11.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W11.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">>Module 11: Working with ES6 and Node.js</h3>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -228,7 +228,7 @@
 
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W12.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W12.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">>Module 12: Test-Driven Development</h3>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -241,7 +241,7 @@
           
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W13.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W13.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h3 class="card-title">Module 13: Modern Development with React</h3>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -253,7 +253,7 @@
 
         <div class="col-md-3 mb-3">
           <div class="card">
-            <img src="../Images/Work_Section_Cards/W14.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
+            <img src="./Images/Work_Section_Cards/W14.jpg" alt="HTML CSS Git Challenge: Code Refactor" class="card-img-top">
             <div class="card-body">
               <h4 class="card-title">Module 14: Advanced React, Testing, and Deployment</h4>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditi
@@ -360,7 +360,7 @@
 
 <section id="aboutme" class="about">
   <div class="about-me">
-    <img src="../Images/Work_Section_Cards/aboutMe.png" alt="">
+    <img src="./Images/Work_Section_Cards/aboutMe.png" alt="">
     <div class="about-info">
       <h1>About Me</h1>
       <h3>Web Developer</h3>
